flex/bison.output
Terminals unused in grammar

   COMMENT
   END
   NULL_


Grammar

    0 $accept: conf $end

    1 conf: global_conf host_confs

    2 global_conf: GLOBAL_KEYWORD LEFT key_value_pairs RIGHT SEMI
    3            | GLOBAL_KEYWORD LEFT key_value_pairs RIGHT

    4 host_confs: /* empty */
    5           | host_confs host_conf

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs RIGHT SEMI
    7          | HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs RIGHT

    8 key_value_pairs: /* empty */
    9                | key_value_pairs NEW_LINE key_value

   10 key_value: KEY EQUAL value

   11 value: INT
   12      | FLOAT
   13      | QUOTED_STRING
   14      | UNQUOTED_STRING
   15      | HOST_NAME_STRING
   16      | KEY


Terminals, with rules where they appear

$end (0) 0
error (256)
QUOTED_STRING (258) 13
COMMENT (259)
KEY (260) 10 16
HOST_NAME_STRING (261) 6 7 15
UNQUOTED_STRING (262) 14
INT (263) 11
FLOAT (264) 12
GLOBAL_KEYWORD (265) 2 3
HOST_KEYWORD (266) 6 7
EQUAL (267) 10
END (268)
SEMI (269) 2 6
LEFT (270) 2 3 6 7
RIGHT (271) 2 3 6 7
NEW_LINE (272) 9
NULL_ (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
conf (20)
    on left: 1, on right: 0
global_conf (21)
    on left: 2 3, on right: 1
host_confs (22)
    on left: 4 5, on right: 1 5
host_conf (23)
    on left: 6 7, on right: 5
key_value_pairs (24)
    on left: 8 9, on right: 2 3 6 7 9
key_value (25)
    on left: 10, on right: 9
value (26)
    on left: 11 12 13 14 15 16, on right: 10


State 0

    0 $accept: . conf $end

    GLOBAL_KEYWORD  shift, and go to state 1

    conf         go to state 2
    global_conf  go to state 3


State 1

    2 global_conf: GLOBAL_KEYWORD . LEFT key_value_pairs RIGHT SEMI
    3            | GLOBAL_KEYWORD . LEFT key_value_pairs RIGHT

    LEFT  shift, and go to state 4


State 2

    0 $accept: conf . $end

    $end  shift, and go to state 5


State 3

    1 conf: global_conf . host_confs

    $default  reduce using rule 4 (host_confs)

    host_confs  go to state 6


State 4

    2 global_conf: GLOBAL_KEYWORD LEFT . key_value_pairs RIGHT SEMI
    3            | GLOBAL_KEYWORD LEFT . key_value_pairs RIGHT

    $default  reduce using rule 8 (key_value_pairs)

    key_value_pairs  go to state 7


State 5

    0 $accept: conf $end .

    $default  accept


State 6

    1 conf: global_conf host_confs .
    5 host_confs: host_confs . host_conf

    HOST_KEYWORD  shift, and go to state 8

    $default  reduce using rule 1 (conf)

    host_conf  go to state 9


State 7

    2 global_conf: GLOBAL_KEYWORD LEFT key_value_pairs . RIGHT SEMI
    3            | GLOBAL_KEYWORD LEFT key_value_pairs . RIGHT
    9 key_value_pairs: key_value_pairs . NEW_LINE key_value

    RIGHT     shift, and go to state 10
    NEW_LINE  shift, and go to state 11


State 8

    6 host_conf: HOST_KEYWORD . HOST_NAME_STRING LEFT key_value_pairs RIGHT SEMI
    7          | HOST_KEYWORD . HOST_NAME_STRING LEFT key_value_pairs RIGHT

    HOST_NAME_STRING  shift, and go to state 12


State 9

    5 host_confs: host_confs host_conf .

    $default  reduce using rule 5 (host_confs)


State 10

    2 global_conf: GLOBAL_KEYWORD LEFT key_value_pairs RIGHT . SEMI
    3            | GLOBAL_KEYWORD LEFT key_value_pairs RIGHT .

    SEMI  shift, and go to state 13

    $default  reduce using rule 3 (global_conf)


State 11

    9 key_value_pairs: key_value_pairs NEW_LINE . key_value

    KEY  shift, and go to state 14

    key_value  go to state 15


State 12

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING . LEFT key_value_pairs RIGHT SEMI
    7          | HOST_KEYWORD HOST_NAME_STRING . LEFT key_value_pairs RIGHT

    LEFT  shift, and go to state 16


State 13

    2 global_conf: GLOBAL_KEYWORD LEFT key_value_pairs RIGHT SEMI .

    $default  reduce using rule 2 (global_conf)


State 14

   10 key_value: KEY . EQUAL value

    EQUAL  shift, and go to state 17


State 15

    9 key_value_pairs: key_value_pairs NEW_LINE key_value .

    $default  reduce using rule 9 (key_value_pairs)


State 16

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING LEFT . key_value_pairs RIGHT SEMI
    7          | HOST_KEYWORD HOST_NAME_STRING LEFT . key_value_pairs RIGHT

    $default  reduce using rule 8 (key_value_pairs)

    key_value_pairs  go to state 18


State 17

   10 key_value: KEY EQUAL . value

    QUOTED_STRING     shift, and go to state 19
    KEY               shift, and go to state 20
    HOST_NAME_STRING  shift, and go to state 21
    UNQUOTED_STRING   shift, and go to state 22
    INT               shift, and go to state 23
    FLOAT             shift, and go to state 24

    value  go to state 25


State 18

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs . RIGHT SEMI
    7          | HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs . RIGHT
    9 key_value_pairs: key_value_pairs . NEW_LINE key_value

    RIGHT     shift, and go to state 26
    NEW_LINE  shift, and go to state 11


State 19

   13 value: QUOTED_STRING .

    $default  reduce using rule 13 (value)


State 20

   16 value: KEY .

    $default  reduce using rule 16 (value)


State 21

   15 value: HOST_NAME_STRING .

    $default  reduce using rule 15 (value)


State 22

   14 value: UNQUOTED_STRING .

    $default  reduce using rule 14 (value)


State 23

   11 value: INT .

    $default  reduce using rule 11 (value)


State 24

   12 value: FLOAT .

    $default  reduce using rule 12 (value)


State 25

   10 key_value: KEY EQUAL value .

    $default  reduce using rule 10 (key_value)


State 26

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs RIGHT . SEMI
    7          | HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs RIGHT .

    SEMI  shift, and go to state 27

    $default  reduce using rule 7 (host_conf)


State 27

    6 host_conf: HOST_KEYWORD HOST_NAME_STRING LEFT key_value_pairs RIGHT SEMI .

    $default  reduce using rule 6 (host_conf)
